--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/Ming">
+ <!--This makes the browser know where is the root of our application is and helps it to construct the URL’s-->
   <meta charset="utf-8">
   <title>Routingandnavigation</title>
-  <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
 </head>
 <body>
-  <app-root></app-root>
+  <!--<app-root></app-root>-->
+<app-ming></app-ming>
 </body>
 </html>
